# nqs-sqd-transformer-lab

./: CLAUDE.md  README.md  pyproject.toml  test_complex_nqs.py  test_nqs_sqd_integration.py  test_particle_constraint.py  test_vmc_optimized.py
.claude/commands/: nqs-theory-review.md  plan-new-experiment.md
.claude/skills/experiment-report-writer/: SKILL.md
.claude/skills/nqs-sqd-research/: SKILL.md
configs/: h2_12bit_ffn.yaml  h2_12bit_transformer.yaml  vmc_training.yaml
docs/: 實驗記錄.md
notebooks/: 001_theory_sanity.ipynb
scripts/: repack.py  repack.sh
src/: __init__.py
src/experiments/: __init__.py  ablation_nqs_vs_baseline.py  h2_12bit_ffn_baseline.py  h2_12bit_transformer_sampler.py
src/nqs_models/: __init__.py  ffn_nqs.py  transformer_nqs.py  utils.py
src/sqd_interface/: hamiltonian.py  sampling_adapters.py  sqd_runner.py
src/training/: README.md  __init__.py  sr_optimizer.py  vmc_trainer.py
